; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_simp.c_constexpr.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_simp.c_constexpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@needconst = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @constexpr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @needconst, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @needconst, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @expr1(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @needconst, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* @needconst, align 4
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i32 @expr1(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
